WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
200646
Fix bad RELEASE_LOG_ERROR under ProvisionalPageProxy::ProvisionalPageProxy()
https://bugs.webkit.org/show_bug.cgi?id=200646
Summary
Fix bad RELEASE_LOG_ERROR under ProvisionalPageProxy::ProvisionalPageProxy()
Chris Dumez
Reported
2019-08-12 16:42:29 PDT
Fix bad RELEASE_LOG_ERROR under ProvisionalPageProxy::ProvisionalPageProxy(). Should be a simple RELEASE_LOG() as this is not an error.
Attachments
Patch
(1.94 KB, patch)
2019-08-12 16:43 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2019-08-12 16:43:19 PDT
Created
attachment 376103
[details]
Patch
WebKit Commit Bot
Comment 2
2019-08-12 18:23:26 PDT
Comment on
attachment 376103
[details]
Patch Clearing flags on attachment: 376103 Committed
r248585
: <
https://trac.webkit.org/changeset/248585
>
WebKit Commit Bot
Comment 3
2019-08-12 18:23:28 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2019-08-12 18:24:16 PDT
<
rdar://problem/54236614
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug