Fix bad RELEASE_LOG_ERROR under ProvisionalPageProxy::ProvisionalPageProxy() https://bugs.webkit.org/show_bug.cgi?id=200646

Reviewed by Alex Christensen.

Fix bad RELEASE_LOG_ERROR under ProvisionalPageProxy::ProvisionalPageProxy(). Should be a
simple RELEASE_LOG() as this is not an error.

* UIProcess/ProvisionalPageProxy.cpp:
(WebKit::ProvisionalPageProxy::ProvisionalPageProxy):


Canonical link: https://commits.webkit.org/214404@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@248585 268f45cc-cd09-0410-ab3c-d52691b4dbfc